--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,13 +22,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver android:name="com.whoami.MyBroadcastreceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <service android:name="com.whoami.MainService"></service>
-        <activity android:name="com.whoami.WelcomeActivity"></activity>
+        <receiver android:name="com.whoami.MyCallEndReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="com.whoami.MainService" >
+        </service>
+
+        <activity android:name="com.whoami.WelcomeActivity" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" >
@@ -37,6 +47,10 @@
     </uses-permission>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
     </uses-permission>
+
+    <permission android:name="android.permission.READ_PHONE_STATE" >
+    </permission>
+
     <uses-permission android:name="android.permission.GET_TASKS" >
     </uses-permission>
 
